--- a/ans-templates/2048-gameinit.yaml
+++ b/ans-templates/2048-gameinit.yaml
@@ -3,6 +3,7 @@
   become: false
   vars:
     namespace: opengame
+    service_account: appcred
   module_defaults:
     group/k8s:
       namespace: "{{ namespace }}"
@@ -16,34 +17,30 @@
         state: present
         namespace: ""
 
-    - name: Create serviceaccount object from the manifest
+    - name: Create the serviceaccount {{ service_account }} objects from the manifest
       k8s:
         state: present
-        src: "{{ playbook_dir + '/2048-serviceaccount.yaml' }}"
+        src: "{{ playbook_dir + '/object-resource-2048-Serviceaccount.yaml' }}"
 
-    - name: Create rbac object from the manifest
-      k8s:
-        state: present
-        src: "{{ playbook_dir + '/2048-rbac.yaml' }}"
-
+    - name: Assign role to the service account
+      command: >
+        oc -n {{ namespace }} adm policy add-scc-to-user anyuid -z {{ service_account }}
 
     - name: Create deployment objects from the manifest
       k8s:
         state: present
-        src: "{{ playbook_dir + '/2048-deploy.yaml' }}"
-
+        src: "{{ playbook_dir + '/object-resource-2048-deploy.yaml' }}"
 
     - name: Create service object from the manifest
       k8s:
         state: present
-        src: "{{ playbook_dir + '/2048-svc.yaml' }}"
-
+        src: "{{ playbook_dir + '/object-resource-2048-Service.yaml' }}"
 
     - name: Create route objects from the manifest
       k8s:
         state: present
-        src: "{{ playbook_dir + '/2048-route.yaml' }}"
-
+        src: "{{ playbook_dir + '/object-resource-2048-route.yaml' }}"
+        
     - name: Get a info about all of the pods in the namespace
       k8s_info:
         kind: Pod
@@ -51,13 +48,13 @@
     - name: Scale deployment up
       k8s_scale:
         kind: Deployment
-        name: 'app2048-deploy'
-        replicas: 1
+        name: app2048-deploy
+        replicas: 3
 
     - name: Get hostname of the route
       k8s_info:
         kind: Route
-        name: 'game'
+        name: game
       register: route
 
     - name: Test access to the app
