--- a/kubemigrate/demo/Containerfile
+++ b/kubemigrate/demo/Containerfile
@@ -1,1 +1,23 @@
-FROM quay.io/redhattraining/httpd-parent 
+FROM registry.access.redhat.com/ubi8/ubi:8.0
+
+MAINTAINER Red Hat Training <training@redhat.com>
+
+ENV DOCROOT=/var/www/html
+
+RUN yum install -y --nodocs --disableplugin=subscription-manager httpd  &&  \
+    yum clean all --disableplugin=subscription-manager -y 
+
+COPY src/ ${DOCROOT}/
+
+EXPOSE 8080
+
+# This stuff is needed to ensure a clean start
+RUN rm -rf /run/httpd && mkdir /run/httpd && \
+    chgrp -R 0 /var/run/httpd /var/log/httpd && chmod -R g=u /var/run/httpd /var/log/httpd && \
+    sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
+
+# Run as the root user
+USER 1001
+
+# Launch httpd
+CMD /usr/sbin/httpd -DFOREGROUND
